...
                                <state key="normal" image="icons8-squared-menu-40"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9JG-1C-pc4">
                                <rect key="frame" x="322" y="111" width="72" height="39"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Log In">
                                            <attributes>
                                                <color key="NSColor" red="0.16779548668361208" green="0.34950824457505336" blue="0.53168623096446699" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <font key="NSFont" size="19" name="ChalkboardSE-Bold"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="b8R-hH-Sob">
                                <rect key="frame" x="40" y="266.5" width="334" height="229.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="lYX-Bc-wqD">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="2Bg-QG-mXM"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Mvp-pf-BGk">
                                        <rect key="frame" x="0.0" y="65" width="334" height="45"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="giS-YE-bWN">
                                        <rect key="frame" x="0.0" y="130" width="334" height="45"/>
                                        <state key="normal">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Sign In">
                                                    <attributes>
                                                        <font key="NSFont" size="28" name="ChalkboardSE-Bold"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
                                        </state>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IKn-EW-uQJ">
                                <rect key="frame" x="27" y="689" width="360" height="45.5"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="eDY-PH-cku"/>
                                </constraints>
                                <attributedString key="attributedText">
                                    <fragment content="Error">
                                        <attributes>
                                            <color key="NSColor" red="0.9955708384513855" green="0.0041397605091333389" blue="0.21414586901664734" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <font key="NSFont" size="14" name="ChalkboardSE-Light"/>
                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                        </attributes>
                                    </fragment>
...
                                        <rect key="frame" x="89" y="261" width="143" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="p7W-jZ-axo"/>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="143" id="xUK-mo-7fd"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="OK"/>
                                        <connections>
                                            <action selector="okButtonTapped:" destination="5aL-fM-093" eventType="touchUpInside" id="JAy-4C-Stz"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.43161088228225708" green="0.75570905208587646" blue="0.90547561645507812" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
